# CMakeInstallExample

./: CMakeLists.txt  EULA.txt  LICENSE  README.md
cmake/: CpackConfig.cmake
data/: data.txt
foo/: CMakeLists.txt
foo/include/foo/: foo.h
foo/src/: foo.cpp
src/: main.cpp
